deploy/base/proxy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: image-rbac-proxy
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-rbac-proxy
  namespace: image-rbac-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-rbac-proxy
  template:
    metadata:
      labels:
        app: image-rbac-proxy
    spec:
      containers:
      - name: image-rbac-proxy
        image: quay.io/konflux-ci/image-rbac-proxy:latest
        ports:
        - containerPort: 4000
          name: https
        resources:
          requests:
            cpu: 250m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /_ping
            port: 4000
            scheme: HTTPS
          initialDelaySeconds: 5
          timeoutSeconds: 5
          periodSeconds: 15
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /_ping
            port: 4000
            scheme: HTTPS
          initialDelaySeconds: 15
          timeoutSeconds: 5
          periodSeconds: 30
          successThreshold: 1
          failureThreshold: 3
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        volumeMounts:
        - name: tls
          mountPath: /certs
        - name: trusted-ca
          mountPath: /etc/ssl/certs
          readOnly: true
      - name: memcache
        image: memcached:1.6.39
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        args:
        - "-m"
        - "64"
        - "-l"
        - "127.0.0.1"
      volumes:
      - name: tls
        secret:
          secretName: proxy-tls
      - name: trusted-ca
        configMap:
          name: trusted-ca
          items:
            - key: ca-bundle.crt
              path: ca-bundle.crt
          optional: true
---
apiVersion: v1
kind: Service
metadata:
  name: image-rbac-proxy
  namespace: image-rbac-proxy
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: proxy-tls
spec:
  selector:
    app: image-rbac-proxy
  ports:
  - name: https
    protocol: TCP
    port: 443
    targetPort: 4000
