deploy/base/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: image-rbac-proxy
  namespace: image-rbac-proxy
spec:
  podSelector:
    matchLabels:
      app: image-rbac-proxy
  policyTypes:
  - Ingress
  ingress:
  - ports:
    - port: 4000
      protocol: TCP
